Sprint 1: описание проекта и техническое задание

--- a/Техническое задание.md
+++ b/Техническое задание.md
@@ -1,39 +1,32 @@
 # Техническое задание: FarmQuest
 
 ## 1. Общее описание
-Веб-игра "ферма" где игрок:
-- Сажает культуры, ухаживает за животными
-- Играет в мини-игры
-- Прокачивает ферму, зарабатывает монеты
+FarmQuest — это веб-игра «ферма», в которой игрок управляет участком земли, сажает и собирает урожай, ухаживает за животными и выполняет простые мини-игры (например, рыбалка или «поймай морковку»), чтобы получать внутриигровую валюту и развивать ферму.
 
 ## 2. Тип проекта
-**Веб-приложение** (SPA с сервером)
+Веб-приложение с клиентской частью в браузере и серверной частью на Node.js.
 
-## 3. Стек технологий
-Frontend: HTML/CSS/JavaScript (Vanilla)
-Backend: Node.js + Express
-База: SQLite
-Хранилище: JSON + БД игроков
-Деплой: Vercel/Netlify + Railway
-
+## 3. Инструменты и стек технологий
+- Frontend: HTML, CSS, JavaScript (без фреймворков на этапе MVP)
+- Backend: Node.js, Express
+- База данных: SQLite
+- Система контроля версий: Git, GitHub
 
 ## 4. Основной функционал MVP
-1. **Регистрация/авторизация** (локальная БД)
-2. **Главный экран фермы** - сетка полей (посадить/собрать)
-3. **Мини-игры** - 2 простые (рыбалка, торг)
-4. **Экономика** - монеты, магазин семян
-5. **Прогресс** - уровни фермы
+1. Регистрация и вход пользователя.
+2. Экран фермы с сеткой полей (посадка и сбор урожая).
+3. Мини-игры (минимум одна: рыбалка или «поймай морковку»).
+4. Внутренняя экономика: монеты, покупка семян/улучшений.
+5. Сохранение прогресса игрока в базе данных.
 
-## 5. Архитектура
-public/ - статика (HTML/JS/CSS)
-src/
-routes/ - API endpoints
-db/ - SQLite схемы
-game/ - игровая логика
+## 5. Нефункциональные требования
+- Работа в актуальных версиях браузеров.
+- Простая адаптация под мобильные устройства.
+- Код проекта хранится в публичном репозитории GitHub и разрабатывается через Issues, ветки и Pull Request.
 
-## 6. Нефункциональные требования
-- Адаптивный дизайн (mobile-first)
-- Локализация RU/EN
-- Производительность: 60 FPS мини-игры
-
-**Одобрено командой:** [ ] Артём [ ] Артемий [ ] Алексей [ ] Ашот [ ] Катя
+**Одобрено командой:**  
+[x] Юсупов Артём  
+[x] Петросян Ашот  
+[x] Жабина Екатерина  
+[x] Кох Артемий  
+[x] Убиволк Алексей
